--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -35,7 +35,7 @@
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p>{{ form.submit(class_="button-29") }}</p>
+        <p>{{ form.submit(class_="btn btn-info-soft mt-3") }}</p>
     </form>
     </div>
 {% endblock %}
