--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -22,7 +22,7 @@ h1 {
 
 label {
     margin-top: 10px;
-    font-family: 'Be Vietnam Pro', sans-serif;
+    font-family: 'inter', sans-serif;
     font-weight: 100;
     font-size: 38px;
 }
@@ -42,14 +42,12 @@ label {
     background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba(0,0,0,0.25)'/></svg>");
 }
 .form-switch .form-check-input:checked {
-    background-color: #faf34f;
-    border-color: #faf34f;
-    border: none;
+    background-color: #4ecbff;
     background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba(255,255,255,1.0)'/></svg>");
 }
 .login-container {
-    margin: 30px 90px;
     color: white;
+    padding-left: 3rem;
 }
 
 label {
@@ -58,11 +56,10 @@ label {
 }
 
 input {
-  border-radius: 20px;
     border: solid 2px;
-  height: 45px;
-  color: white;
-  background-color: black;
+    height: 45px;
+    color: white;
+    background-color: black;
     text-align: center;
 
 }
@@ -84,8 +81,18 @@ a {
 }
 
 a:hover {
-    color: #8222d1;
+    color: #4ecbff;
 }
-
-
-/* CSS */
+.btn-info-soft {
+    font-size: 1.5rem;
+    height: 3rem;
+}
+.btn-info-soft {
+  color: #4f9ef8;
+  background-color: rgba(79, 158, 248, 0.1);
+}
+.btn-info-soft:active, .btn-info-soft:hover, .btn-info-soft:focus {
+  color: white !important;
+  background-color: #4f9ef8 !important;
+  border-color: #4f9ef8 !important;
+}
