--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -27,7 +27,7 @@
                     <label class="form-check-label" for="flexSwitchCheckDefault">Remember me</label>
                     {{ form.remember_me(class_="form-check-input", role="switch", id="flexSwitchCheckDefault") }}
                 </div>
-            <p>{{ form.submit(class_="button-29") }}</p>
+            <p>{{ form.submit(class_="btn btn-info-soft mt-3") }}</p>
             </div>
         </form>
         <div class="LogOptions">
