--- a/app/templates/auth/reset_password_request.html
+++ b/app/templates/auth/reset_password_request.html
@@ -11,6 +11,6 @@
         <span style="color:red;">{{ error }}</span>
         {% endfor %}
     </p>
-    <p>{{ form.submit() }}</p>
+    <p>{{ form.submit(class_="btn btn-info-soft mt-3") }}</p>
 </form>
 {% endblock %}
