--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -5,12 +5,10 @@
         <div class="row">
             <div class="col lg-3">
                 <div class="offcanvas-body d-block px-2 px-lg-0">
-                    <!-- Card START -->
                     <div class="card overflow-hidden">
                         <!-- Cover image -->
                         <div class="h-50px"
                              style="background-image: url('{{ url_for('static', filename='images/blog_main.png') }}'); background-position: center; background-size: cover; background-repeat: no-repeat;"></div>
-                        <!-- Card body START -->
                         <div class="card-body pt-0">
                             <div class="text-center">
                                 <!-- Avatar -->
@@ -20,7 +18,6 @@
                                             src="{{ url_for('static', filename='uploads/' + current_user.avatar) if current_user.avatar else current_user.avatar_alt(70) }}"
                                             alt="avatar"></a>
                                 </div>
-                                <!-- Info -->
                                 <h5 class="mb-0"><a
                                         href="{{ url_for('main.user', username=current_user.username) }}">{{ current_user.username }} </a>
                                 </h5>
@@ -28,35 +25,25 @@
                                     <p class="mt-3">{{ current_user.about_me }}</p>
                                 {% endif %}
 
-                                <!-- User stat START -->
                                 <div class="hstack gap-2 gap-xl-3 justify-content-center">
-                                    <!-- User stat item -->
                                     <div>
                                         <h6 class="mb-0">{{ current_user.posts.count() }}</h6>
                                         <small>Post</small>
                                     </div>
-                                    <!-- Divider -->
                                     <div class="vr"></div>
-                                    <!-- User stat item -->
                                     <div>
                                         <h6 class="mb-0">{{ current_user.followers.count() }}</h6>
                                         <small>Followers</small>
                                     </div>
-                                    <!-- Divider -->
                                     <div class="vr"></div>
-                                    <!-- User stat item -->
                                     <div>
                                         <h6 class="mb-0">{{ current_user.followed.count() }}</h6>
                                         <small>Following</small>
                                     </div>
                                 </div>
-                                <!-- User stat END -->
                             </div>
-
-                            <!-- Divider -->
                             <hr>
 
-                            <!-- Side Nav START -->
                             <ul class="nav nav-link-secondary flex-column fw-bold gap-2">
                                 <li class="nav-item">
                                     <a class="nav-link"
@@ -86,39 +73,26 @@
                                             alt=""></i><span>  Log Out </span></a>
                                 </li>
                             </ul>
-                            <!-- Side Nav END -->
                         </div>
-                        <!-- Card body END -->
-                        <!-- Card footer -->
                         <div class="card-footer text-center py-2">
                             <a class="btn btn-link btn-sm"
                                href="{{ url_for('main.user', username=current_user.username) }}">View
                                 Profile </a>
                         </div>
                     </div>
-                    <!-- Card END -->
-                    <!-- Copyright -->
+
                     <p class="small text-center mt-1">©2023 <a class="text-body" target="_blank"
                                                                href="https://www.linkedin.com/in/yury-ash-a74058253/">
                         LinkedInYury </a></p>
                 </div>
             </div>
-            <!-- Sidenav END -->
-
-            <!-- Main content START -->
             <div class="col-lg-6 vstack gap-4">
-                <!-- Setting Tab content START -->
                 <div class="tab-content py-0 mb-0">
-                    <!-- Account setting tab START -->
                     <div class="tab-pane show active fade" id="nav-setting-tab-1" role="tabpanel">
-                        <!-- Account settings START -->
                         <div class="card mb-4">
-
-                            <!-- Title START -->
                             <div class="card-header border-0 pb-0">
                                 <h1 class="h5 card-title">Account Settings</h1>
                             </div>
-                            <!-- Card body START -->
                             <div class="card-body">
                                 <form class="row g-3" action="{{ url_for('main.edit_profile') }}" method="post"
                                       enctype="multipart/form-data">
@@ -146,7 +120,6 @@
                                         {% for error in form.username.errors %}
                                             <span style="color: red;">[{{ error }}]</span>
                                         {% endfor %}
-                                        <!-- Page information -->
                                         <div class="col-12">
                                             <label class="form-label">About me</label>
                                             {{ form.about_me(rows=4, class="form-control") }}<br>
@@ -167,19 +140,14 @@
                                         </div>
                                     </div>
                                 </form>
-                                <!-- Settings END -->
                             </div>
-                            <!-- Card body END -->
                         </div>
-                        <!-- Change your password START -->
+                        <!-- Change your password  -->
                         <div class="card">
-                            <!-- Title START -->
                             <div class="card-header border-0 pb-0">
                                 <h5 class="card-title">Change your password</h5>
                             </div>
-                            <!-- Title START -->
                             <div class="card-body">
-                                <!-- Settings START -->
                                 <form class="row g-3" action="{{ url_for('auth.password_reset') }}" method="post">
                                     {{ password_form.hidden_tag() }}
                                     <!-- Current password -->
@@ -190,12 +158,10 @@
                                     <!-- New password -->
                                     <div class="col-12">
                                         {{ password_form.password.label(class="form-label") }}
-                                        <!-- Input group -->
                                         <div class="input-group">
                                             {{ password_form.password(class="form-control fakepassword", id="psw-input") }}
                                             <span class="input-group-text p-0">
-                          <i class="bi bi-eye-slash cursor-pointer p-2 w-40px"></i>
-                        </span>
+                          <i class="bi bi-eye-slash cursor-pointer p-2 w-40px"></i></span>
                                         </div>
                                     </div>
                                     <div class="col-12">
@@ -214,14 +180,14 @@
         </div>
     </div>
     <script>
-const togglePassword = document.querySelector('.bi-eye-slash');
-const password = document.querySelector('.fakepassword');
-togglePassword.addEventListener('click', function (e) {
-    // toggle the type attribute
-    const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
-    password.setAttribute('type', type);
-    // toggle the eye / eye slash icon
-    this.classList.toggle('bi-eye');
-});
+        const togglePassword = document.querySelector('.bi-eye-slash');
+        const password = document.querySelector('.fakepassword');
+        togglePassword.addEventListener('click', function (e) {
+            // toggle the type attribute
+            const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+            password.setAttribute('type', type);
+            // toggle the eye / eye slash icon
+            this.classList.toggle('bi-eye');
+        });
     </script>
 {% endblock %}
