--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,6 +1,12 @@
-{% extends "base.html" %}
+{% extends "auth/base_login.html" %}
 
 {% block content %}
+    {% block css %}
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+    {% endblock %}
+        <div class="login-container container-fluid">
+
     <h1>{{ _('File Not Found')}}</h1>
     <p><a href="{{ url_for('main.index') }}">Back</a></p>
+        </div>
 {% endblock %}
