--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -1,7 +1,14 @@
-{% extends "base.html" %}
+
+{% extends "auth/base_login.html" %}
 
 {% block content %}
+    {% block css %}
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+    {% endblock %}
+        <div class="login-container container-fluid">
+
     <h1>{{ _('An unexpected error has occurred') }}</h1>
     <p>{{ _('The administrator has been notified. Sorry for the inconvenience!')}}</p>
     <p><a href="{{ url_for('main.index') }}">Back</a></p>
+        </div>
 {% endblock %}
