--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,22 +4,19 @@
 
     <div class="container-fluid">
         <div class="row g-4">
+            <div class="col-lg-3">
             {% include '_user_card.html' %}
+            </div>
             <div class="col-md-8 col-lg-6 gap-4 vstack">
                 {% if post_exclude %}
-                <h1>Explore latest posts:</h1>
                 {% else %}
                 {% include 'dropzone.html' %}
-                <h1>Latest from your feed</h1>
                 {% endif %}
                 {% include '_post.html' %}
             </div>
             <div class="col-lg-3">
                 <div class="row g-4">
                     {% include 'who_to_follow.html' %}
-                    {% for hashtag, count in hashtag_counts %}
-                        {% include 'hashtags.html' %}
-                    {% endfor %}
                 </div>
             </div>
         </div>
