--- a/app/templates/sub_main.html
+++ b/app/templates/sub_main.html
@@ -1,118 +1,137 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="container">
-    <div class="row g-4">
-    <div class="col-lg-8 vstack gap-4">
-    <div class="card">
-        <!-- Cover image -->
-        <div class="h-200px rounded-top"
-             style="background-image:url('{{ url_for('static', filename='uploads/' + user.background_image) if user.background_image else url_for('static', filename='images/blog_main.png') }}'); background-position: center; background-size: cover; background-repeat: no-repeat;"></div>
-        <!-- Card body START -->
-        <div class="card-body py-0">
-            <div class="d-sm-flex align-items-start text-center text-sm-start">
-                <div>
-                    <!-- Avatar -->
-                    <div class="avatar avatar-xxl mt-n5 mb-3">
-                        <img class="avatar-img rounded-circle border border-white border-3" src="{{ url_for('static', filename='uploads/' + user.avatar) if user.avatar else user.avatar_alt(70) }}" alt="avatar">
-                    </div>
-                </div>
-                <div class="ms-sm-4 mt-sm-3">
-                    <!-- Info -->
-                    <h1 class="mb-0 h5">{{ user.username }}<i class="bi bi-patch-check-fill text-success small"></i>
-                    </h1>
-                </div>
-                <!-- Button -->
-                    <div class="d-flex mt-3 justify-content-center ms-sm-auto">
-                {% if user == current_user %}
-                        <button class="btn btn-danger-soft me-2" type="button"
-                                onclick="redirectToPage('{{ url_for('main.edit_profile') }}')"><i
-                                class="bi bi-pencil-fill pe-1"></i> {{ _('Edit profile') }}
-                        </button>
-                        {% if not current_user.get_task_in_progress('export_posts') %}
-                            <button class="btn btn-warning-soft me-2" type="button"
-                                    onclick="redirectToPage('{{ url_for('main.export_posts') }}')"><i
-                                    class="bi bi-arrow-down pe-1"></i>{{ _('Export your posts') }}</button>
-                        {% endif %}
-                        {% elif user != current_user %}
-                {% if current_user.is_following(user) %}
-                    <form action="{{ url_for('main.unfollow', username=user.username) }}" method="post">
-                        {{ form.hidden_tag() }}
-                        {{ form.submit(class_='btn btn-danger-soft me-2', value=_('Unfollow'), type='submit') }}
-                    </form>
-                {% else %}
-                    <form action="{{ url_for('main.follow', username=user.username) }}" method="post">
-                        {{ form.hidden_tag() }}
-                        {{ form.submit(class_='btn btn-success-soft me-2', value=_('Follow'), type='submit') }}
-                    </form>
-
-                {% endif %}
-
-                 <button class="btn btn-info-soft me-2" type="button"
-                                    onclick="redirectToPage('{{ url_for('main.messages', user=user.id) }}')"><i
-                                    class="bi bi-send-fill pe-1"></i>{{ _('Send private message') }}</button>
-                    {% endif %}
-                    </div>
-            </div>
-            <ul class="list-inline mb-0 text-center text-sm-start mt-3 mt-sm-0">
-                <li class="list-inline-item"><i
-                        class="bi bi-briefcase me-1"></i> {{ _('%(count)d followers', count=user.followers.count()) }}
-                </li>
-                <li class="list-inline-item"><i
-                        class="bi bi-geo-alt me-1"></i> {{ _('%(count)d following', count=user.followed.count()) }}</li>
-                {% if user.last_seen %}
-                    <li class="list-inline-item"><i
-                            class="bi bi-calendar2-plus me-1"></i>{{ _('Last seen on') }}: {{ moment(user.last_seen).format('LLL') }}
-                    </li>{% endif %}
-            </ul>
-        </div>
-
-        <!-- Card body END -->
-        <div class="card-footer mt-3 pt-2 pb-0">
-            <!-- Nav profile pages -->
-            <ul class="nav nav-bottom-line align-items-center justify-content-center justify-content-md-start mb-0 border-0">
-                <li class="nav-item"><a class="nav-link {% if posts %}active{% endif %}" href="{{ url_for('main.user', username=user.username) }}">
-                    Posts </a></li>
-                <li class="nav-item"><a class="nav-link {% if request.path.endswith('following')%}active{% endif %}" href="{{ url_for('main.followers', username=user.username, relation='following') }}"> Follows <span
-                        class="badge bg-success bg-opacity-10 text-success small"> {{ user.followed.count() }}</span> </a></li>
-                <li class="nav-item"><a class="nav-link {% if request.path.endswith('followers')%} active{% endif %}" href="{{ url_for('main.followers', username=user.username, relation='followers') }}"> Followers
-                    <span class="badge bg-success bg-opacity-10 text-success small"> {{ user.followers.count() }}</span> </a></li>
-                <li class="nav-item"><a class="nav-link {% if request.path.endswith('media')%}active{% endif %}" href="{{ url_for('main.media', username=user.username) }}"> Media</a></li>
-                <li class="nav-item"><a class="nav-link {% if request.path.endswith('liked')%}active{% endif %}" href="{{ url_for('main.liked', username=user.username) }}"> Liked</a></li>
-            </ul>
-        </div>
-    </div>
-{% block tab %}
-{% endblock %}
-    </div>
-    <!-- right block -->
-    <div class="col-lg-4">
         <div class="row g-4">
-              <!-- top right -->
-        {% include 'who_to_follow.html' %}            <!-- bot right  -->
-            {% if images %}
-            <div class="col-md-6 col-lg-12">
-            <div class="card">
-              <div class="card-header d-sm-flex justify-content-between border-0">
-                <h5 class="card-title">Photos</h5>
-                <a class="btn btn-primary-soft btn-sm" href="{{ url_for('main.media', username=user.username) }}"> See all photo</a>
-              </div>
-              <div class="card-body position-relative pt-0">
-                <div class="row g-2">
-                {% for image in images[0:4] %}
-                  <div class="col-6">
-                      <a href="{{ url_for('static', filename='uploads/' + image.filename) }}" class="glightbox3" data-gallery="gallery1">
-                      <img class="rounded img-fluid" src="{{ url_for('static', filename='uploads/' + image.filename) }}" alt="">
-                    </a>
-                  </div>
-                {% endfor %}
-                  </div>
+            <div class="col-lg-8 vstack gap-4">
+                <div class="card">
+                    <!-- Cover image -->
+                    <div class="h-200px rounded-top main-page"
+                         style="background-image:url('{{ url_for('static', filename='uploads/' + user.background_image) if user.background_image else url_for('static', filename='images/blog_main.png') }}'); background-position: center; background-size: cover; background-repeat: no-repeat;"></div>
+                    <div class="card-body py-0">
+                        <div class="d-sm-flex align-items-start text-center text-sm-start">
+                            <div>
+                                <!-- Avatar -->
+                                <div class="avatar avatar-xxl mt-n5 mb-3">
+                                    <img class="avatar-img rounded-circle border border-white border-3"
+                                         src="{{ url_for('static', filename='uploads/' + user.avatar) if user.avatar else user.avatar_alt(70) }}"
+                                         alt="avatar">
+                                </div>
+                            </div>
+                            <div class="ms-sm-4 mt-sm-3">
+                                <h1 class="mb-0 h5">{{ user.username }}<i class=" text-success small"></i>
+                                </h1>
+                                {% if user.about_me %}
+                                    <p class="p-1">{{ user.about_me }}</p>
+                                {% endif %}
+                            </div>
+                            <div class="d-flex mt-3 justify-content-center ms-sm-auto">
+                                {% if user == current_user %}
+                                    <button class="btn btn-info-soft me-2 edit-btn" type="button"
+                                            onclick="redirectToPage('{{ url_for('main.edit_profile') }}')"><i
+                                            class="bi bi-pencil-fill pe-1"></i>{{ _('Edit profile') }}
+                                    </button>
+                                    {% if not current_user.get_task_in_progress('export_posts') %}
+                                        <button class="btn btn-blight-soft" type="button"
+                                                onclick="redirectToPage('{{ url_for('main.export_posts') }}')"><i
+                                                class="bi bi-arrow-down pe-1"></i>{{ _('Export your posts') }}</button>
+                                    {% endif %}
+                                {% elif user != current_user %}
+                                    {% if current_user.is_following(user) %}
+                                        <form action="{{ url_for('main.unfollow', username=user.username) }}"
+                                              method="post">
+                                            {{ form.hidden_tag() }}
+                                            {{ form.submit(class_='btn btn-danger-soft me-2', value=_('Unfollow'), type='submit') }}
+                                        </form>
+                                    {% else %}
+                                        <form action="{{ url_for('main.follow', username=user.username) }}"
+                                              method="post">
+                                            {{ form.hidden_tag() }}
+                                            {{ form.submit(class_='btn btn-success-soft me-2', value=_('Follow'), type='submit') }}
+                                        </form>
+
+                                    {% endif %}
+
+                                    <button class="btn btn-info-soft me-2" type="button"
+                                            onclick="redirectToPage('{{ url_for('main.messages', user=user.id) }}')"><i
+                                            class="bi bi-send-fill pe-1"></i>{{ _('Send private message') }}</button>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <ul class="list-inline mb-0 text-center text-sm-start mt-3 mt-sm-0">
+                            <li class="list-inline-item"><i
+                                    class="bi bi-people-fill me-1"></i> {{ _('%(count)d followers', count=user.followers.count()) }}
+                            </li>
+                            <li class="list-inline-item"><i
+                                    class="bi bi-people me-1"></i> {{ _('%(count)d following', count=user.followed.count()) }}
+                            </li>
+                            {% if user.last_seen %}
+                                <li class="list-inline-item"><i
+                                        class="bi bi-calendar2-plus me-1"></i>{{ _('Last seen on') }}: {{ moment(user.last_seen).format('LLL') }}
+                                </li>{% endif %}
+                        </ul>
+                    </div>
+
+                    <div class="card-footer mt-3 pt-2 pb-0">
+                        <ul class="nav nav-bottom-line align-items-center justify-content-center justify-content-md-start mb-0 border-0">
+                            <li class="nav-item"><a class="nav-link {% if posts %}active{% endif %}"
+                                                    href="{{ url_for('main.user', username=user.username) }}">
+                                Posts </a></li>
+                            <li class="nav-item"><a
+                                    class="nav-link {% if request.path.endswith('following') %}active{% endif %}"
+                                    href="{{ url_for('main.followers', username=user.username, relation='following') }}">
+                                Follows <span
+                                    class="badge bg-success bg-opacity-10 text-success small"> {{ user.followed.count() }}</span>
+                            </a></li>
+                            <li class="nav-item"><a
+                                    class="nav-link {% if request.path.endswith('followers') %} active{% endif %}"
+                                    href="{{ url_for('main.followers', username=user.username, relation='followers') }}">
+                                Followers
+                                <span class="badge bg-success bg-opacity-10 text-success small"> {{ user.followers.count() }}</span>
+                            </a></li>
+                            <li class="nav-item"><a
+                                    class="nav-link {% if request.path.endswith('media') %}active{% endif %}"
+                                    href="{{ url_for('main.media', username=user.username) }}"> Media</a></li>
+                            <li class="nav-item"><a
+                                    class="nav-link {% if request.path.endswith('liked') %}active{% endif %}"
+                                    href="{{ url_for('main.liked', username=user.username) }}"> Liked</a></li>
+                        </ul>
+                    </div>
                 </div>
-              </div>
+                {% block tab %}
+                {% endblock %}
             </div>
-        {% endif %}
+            <!-- right block -->
+            <div class="col-lg-4">
+                <div class="row g-4">
+                    {% include 'who_to_follow.html' %}            <!-- bot right  -->
+                    {% if images %}
+                        <div class="col-md-6 col-lg-12">
+                            <div class="card">
+                                <div class="card-header d-sm-flex justify-content-between border-0">
+                                    <h5 class="card-title">Photos</h5>
+                                    <a class="btn btn-primary-soft btn-sm"
+                                       href="{{ url_for('main.media', username=user.username) }}"> See all photo</a>
+                                </div>
+                                <div class="card-body position-relative pt-0">
+                                    <div class="row g-2">
+                                        {% for image in images[0:4] %}
+                                            <div class="col-6">
+                                                <a href="{{ url_for('static', filename='uploads/' + image.filename) }}"
+                                                   class="glightbox3" data-gallery="gallery1">
+                                                    <img class="rounded img-fluid"
+                                                         src="{{ url_for('static', filename='uploads/' + image.filename) }}"
+                                                         alt="">
+                                                </a>
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+                </div>
+            </div>
         </div>
-    </div>
-    </div>
     </div>
 
 {% endblock %}
