--- a/app/templates/media.html
+++ b/app/templates/media.html
@@ -17,7 +17,7 @@
                                 <input type="file" name="image" id="imageUpload" style="display: none;"/>
                                 <a class="stretched-link" href="#!" id="addImage">
                                     <i class="fa-solid fa-camera-retro fs-1"></i>
-                                    <h6 class="mt-2">Add photo</h6>
+                                    <h6 class="mt-2" style="color:#0a0d0f">Add photo</h6>
                                 </a>
                             </form>
                         </div>
