--- a/app/templates/sub_main.html
+++ b/app/templates/sub_main.html
@@ -6,7 +6,7 @@
                 <div class="card">
                     <!-- Cover image -->
                     <div class="h-200px rounded-top main-page"
-                         style="background-image:url('{{ url_for('static', filename='uploads/' + user.background_image) if user.background_image else url_for('static', filename='images/blog_main.png') }}'); background-position: center; background-size: cover; background-repeat: no-repeat;"></div>
+                         style="background-image:url('{{ url_for('static', filename='uploads/' + user.background_image) if user.background_image else url_for('static', filename='images/blog_main.avif') }}'); background-position: center; background-size: cover; background-repeat: no-repeat;"></div>
                     <div class="card-body py-0">
                         <div class="d-sm-flex align-items-start text-center text-sm-start">
                             <div>
