--- a/app/static/css/messages.css
+++ b/app/static/css/messages.css
@@ -21,7 +21,8 @@
     padding-left: 10px;
 }
 .chat-window {
-    max-height: 400px;
+    min-height: 400px;
+    max-height: 600px;
     overflow-y: auto;
     overflow-x: hidden;
     padding: 15px;
