--- a/app/templates/auth/base_login.html
+++ b/app/templates/auth/base_login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if title %}
         <title>{{ title }} - MuseMe</title>
     {% else %}
@@ -19,6 +20,13 @@
           rel="stylesheet">
 </head>
 <body>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-primary" role="alert">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
 {% block content %} {% endblock %}
 </body>
 </html>
