--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -8,7 +8,7 @@
                     <div class="card overflow-hidden">
                         <!-- Cover image -->
                         <div class="h-50px"
-                             style="background-image: url('{{ url_for('static', filename='images/blog_main.png') }}'); background-position: center; background-size: cover; background-repeat: no-repeat;"></div>
+                 style="background-image: url('{{ url_for('static', filename='uploads/' + current_user.background_image) if current_user.background_image else url_for('static', filename='images/blog_main.avif') }}'); background-position: center; background-size: cover; background-repeat: no-repeat;"></div>
                         <div class="card-body pt-0">
                             <div class="text-center">
                                 <!-- Avatar -->
