--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,7 +65,7 @@
                     <div class="nav-item w-100 pb-2">
                         <form class="rounded position-relative" id="search-form" method="get"
                               action="{{ url_for('main.search') }}">
-                            {{ g.search_form.q(class_="form-control ps-5 bg-light", placeholder="Search...") }}
+                            {{ g.search_form.q(class_="form-control ps-5 bg-light", placeholder="Search post...") }}
                             <button class="btn bg-transparent px-2 py-0 position-absolute top-50 start-0 translate-middle-y"
                                     type="submit"><i class="bi bi-search fs-5"> </i></button>
                         </form>
